[project]
name = "plotly-coupling-map"
version = "0.1.0"
description = "Plotting coupling maps with Plotly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.6",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotly_coupling_map"]
